Fix feature info table word wrap and added a try catch on the getFeaturesInfo() method

--- a/forest-monitor-app/src/app/pages/explore/map/feature-info/feature-info.component.scss
+++ b/forest-monitor-app/src/app/pages/explore/map/feature-info/feature-info.component.scss
@@ -181,3 +181,7 @@ button:focus {
 .justify-content-center {
   justify-content: center;
 }
+
+.word-wrap {
+  word-wrap: anywhere;
+}
